[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/enemy_2_fire.gd" type="Script" id=1]
[ext_resource path="res://wad/gfx/Explosion 2 clone-1.png.png" type="Texture" id=2]
[ext_resource path="res://wad/gfx/Explosion 2 clone-2.png.png" type="Texture" id=3]
[ext_resource path="res://wad/gfx/Explosion 2 clone-3.png.png" type="Texture" id=4]
[ext_resource path="res://wad/gfx/Explosion 2 clone-4.png.png" type="Texture" id=5]
[ext_resource path="res://wad/gfx/Explosion 2 clone-5.png.png" type="Texture" id=6]
[ext_resource path="res://wad/gfx/Explosion 2 clone-6.png.png" type="Texture" id=7]
[ext_resource path="res://wad/gfx/gosma verde clone-1.png.png" type="Texture" id=8]
[ext_resource path="res://wad/gfx/gosma verde clone-2.png.png" type="Texture" id=9]
[ext_resource path="res://wad/gfx/gosma verde clone-3.png.png" type="Texture" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 33.3667

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="ParticlesMaterial" id=4]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = true
flag_rotate_y = true
flag_disable_z = true
spread = 180.0
flatness = 1.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 25.0
initial_velocity_random = 0.0
angular_velocity = 360.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 5.0
radial_accel_random = 0.0
tangential_accel = 5.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 100.0
angle_random = 0.0
scale = 3.5
scale_random = 1.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Angle", "Angular Velocity", "Damping", "Emission Shape", "Flags", "Gravity", "Initial Velocity", "Linear Accel", "Orbit Velocity", "Radial Accel", "Scale", "Spread", "Tangential Accel", "Trail" ]

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 36.1338, 35.0727 )

[node name="enemy_2_fire" type="RigidBody2D"]

input_pickable = false
collision_layer = 1280
collision_mask = 1126
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 1
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear", "Transform" ]

[node name="collision_enemy_fire" type="CollisionShape2D" parent="." index="0"]

visible = false
scale = Vector2( 0.4, 0.4 )
shape = SubResource( 1 )

[node name="enemy_fire_destoyed" type="AnimatedSprite" parent="." index="1"]

modulate = Color( 0.382813, 1, 0, 1 )
scale = Vector2( 2.2, 2.2 )
frames = SubResource( 2 )
animation = "default"
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="enemy_2_fire_sprite" type="AnimatedSprite" parent="." index="2"]

scale = Vector2( 0.4, 0.4 )
frames = SubResource( 3 )
animation = "default"
frame = 1
playing = true
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Particles2D" type="Particles2D" parent="enemy_2_fire_sprite" index="0"]

modulate = Color( 0.664842, 0.972656, 0.326752, 1 )
scale = Vector2( 2.5, 2.5 )
emitting = true
amount = 12
lifetime = 3.0
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 1.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = SubResource( 4 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Process Material", "Time", "Transform", "Visibility" ]

[node name="enemy_2_fire_area_hit" type="Area2D" parent="." index="3"]

scale = Vector2( 0.4, 0.4 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 9
collision_mask = 64
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision", "Visibility" ]

[node name="collision_area_hit_enemy_fire_2" type="CollisionShape2D" parent="enemy_2_fire_area_hit" index="0"]

visible = false
shape = SubResource( 5 )

[node name="enemy_2_fire_timer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 6.0
one_shot = false
autostart = true

[node name="destruction_fire_timer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="body_entered" from="." to="." method="_on_enemy_2_fire_body_entered"]

[connection signal="animation_finished" from="enemy_fire_destoyed" to="." method="_on_enemy_fire_destoyed_animation_finished"]

[connection signal="area_entered" from="enemy_2_fire_area_hit" to="." method="_on_enemy_2_fire_area_hit_area_entered"]

[connection signal="timeout" from="enemy_2_fire_timer" to="." method="_on_enemy_2_fire_timer_timeout"]

[connection signal="timeout" from="destruction_fire_timer" to="." method="_on_destruction_fire_timer_timeout"]


